--- a/languages/ja.po
+++ b/languages/ja.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: official\n"
-"POT-Creation-Date: 2017-08-12 21:13+1200\n"
-"PO-Revision-Date: 2017-08-12 21:14+1200\n"
+"POT-Creation-Date: 2017-08-13 15:48+1200\n"
+"PO-Revision-Date: 2017-08-13 15:48+1200\n"
 "Last-Translator: \n"
 "Language-Team: Mirucon\n"
 "Language: ja\n"
@@ -164,6 +164,10 @@ msgid "Support AMP"
 msgstr "AMP をサポート"
 
 #: home.php:146
+msgid "/demo/html-tags-and-formatting/?amp=1"
+msgstr "/demo/ja/html-tags-and-formatting/?amp=1"
+
+#: home.php:146
 msgid "See AMP Demo"
 msgstr "AMP デモを見る"
 
@@ -173,7 +177,7 @@ msgid ""
 "Supports the AMP, which is the fastest HTML format recommened by Google. "
 "You'll never lost visitors due to loading speed. %s"
 msgstr ""
-"Google の推奨するモバイル用の超速 HTML フォーマットである AMP に対応していま"
+"Google の提唱するモバイル用の超速 HTML フォーマットである AMP に対応していま"
 "す。%s"
 
 #: home.php:163
@@ -230,6 +234,10 @@ msgid ""
 "Not satisfied with the features? You can just tell me what you want through "
 "the forum or my email."
 msgstr "新機能の要望も作者までお気軽にお問い合わせください。"
+
+#: home.php:211
+msgid "The Add-On Plugin"
+msgstr "アドオンプラグイン"
 
 #: home.php:216
 msgid "https://coldbox.miruc.co/addon/"
