--- a/languages/ja.po
+++ b/languages/ja.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: official\n"
-"POT-Creation-Date: 2017-08-13 15:48+1200\n"
-"PO-Revision-Date: 2017-08-15 18:57+1200\n"
+"POT-Creation-Date: 2018-03-13 11:36+0900\n"
+"PO-Revision-Date: 2018-03-13 11:37+0900\n"
 "Last-Translator: \n"
 "Language-Team: Mirucon\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.3\n"
+"X-Generator: Poedit 2.0.4\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -26,19 +26,23 @@ msgstr "デモサイト"
 msgid "Documentaion"
 msgstr "マニュアル"
 
-#: header-child.php:32
+#: header-child.php:31
+msgid "Forum"
+msgstr ""
+
+#: header-child.php:33
 msgid "languages"
 msgstr "languages"
 
-#: header-child.php:33
+#: header-child.php:34
 msgid "https://coldbox.miruc.co/ja/"
 msgstr "https://coldbox.miruc.co/"
 
-#: header-child.php:33
+#: header-child.php:34
 msgid "日本語"
 msgstr "English"
 
-#: header-child.php:37 home.php:22
+#: header-child.php:38 home.php:22
 msgid "Download"
 msgstr "Download"
 
@@ -63,8 +67,8 @@ msgid "Customizable"
 msgstr "簡単にカスタマイズ可能"
 
 #: home.php:53
-msgid "You can change the appearance easily without coding."
-msgstr "カスタマイザーから様々な設定を変更できます。"
+msgid "You can change the appearance easily without any coding."
+msgstr "カスタマイザーから様々な設定を簡単に変更できます。"
 
 #: home.php:60
 msgid "Beautiful and Simple"
@@ -89,7 +93,7 @@ msgid "Modern Layout"
 msgstr "モダンレイアウト"
 
 #: home.php:77
-msgid "It is layouted with the Flexbox module, which is really flexible."
+msgid "It is laid out with the Flexbox module, which is really flexible."
 msgstr ""
 "柔軟なレイアウトが出来る最先端な Flexbox レイアウトモジュールを採用していま"
 "す。"
@@ -109,7 +113,7 @@ msgid "Quick Load"
 msgstr "素早いロード"
 
 #: home.php:92
-msgid "It brings your website to be quicker."
+msgid "It will definitely make your website quicker."
 msgstr "必要なものだけをロードすることにより、軽量なテーマになりました。"
 
 #: home.php:99
@@ -117,7 +121,7 @@ msgid "Blog Focused"
 msgstr "ブログ用途にフォーカス"
 
 #: home.php:100
-msgid "It is focused blogging usage."
+msgid "It has been focused blogging usage."
 msgstr "主にブログ用途にフォーカスして作られました。"
 
 #: home.php:107
@@ -125,7 +129,8 @@ msgid "Free"
 msgstr "無料"
 
 #: home.php:108
-msgid "You can use full features and functions without any restrictions."
+msgid ""
+"You can use full features and functions without any restrictions and money."
 msgstr "すべての機能を制限なし・無料でお使いいただけます。"
 
 #: home.php:115
@@ -220,19 +225,19 @@ msgstr "作者 Twitter"
 
 #: home.php:192
 msgid ""
-"Just let me know about the bug on the forum or <a href=\"mailto:"
-"admin@mirucon.com\">email me</a>. Thank you!"
-msgstr ""
-"%s、もしくは admin_at_mirucon.com 宛のメールで教えてくださると嬉しいです。"
+"Just let me know about the bug on the forum or by <a href=\"mailto:i@miruc.co"
+"\">sending me an email</a>. Thanks!"
+msgstr "%s, もしくは i_at_miruc.co 宛のメールで教えてくださると嬉しいです。"
 
 #: home.php:199
-msgid "I have a new feature request."
-msgstr "新機能の要望"
+msgid "I have a new feature that I think the theme should have got?"
+msgstr ""
 
 #: home.php:201
 msgid ""
-"Not satisfied with the features? You can just tell me what you want through "
-"the forum or my email."
+"If you are not satisfied with the theme features, then you can just ask me "
+"to add what you want on the forum or by <a href=\"mailto:i@miruc.co"
+"\">sending me an email</a>."
 msgstr "新機能の要望も作者までお気軽にお問い合わせください。"
 
 #: home.php:211
@@ -240,20 +245,26 @@ msgid "The Add-On Plugin"
 msgstr "アドオンプラグイン"
 
 #: home.php:216
-msgid "https://coldbox.miruc.co/addon/"
-msgstr "https://coldbox.miruc.co/ja/addon/"
+msgid "https://wordpress.org/plugins/coldbox-addon/"
+msgstr "https://ja.wordpress.org/plugins/coldbox-addon/"
 
 #: home.php:219
 msgid "Coldbox Addon"
-msgstr ""
+msgstr "Coldbox Addon"
 
 #: home.php:220
 msgid ""
-"The powered addon for the Coldbox theme. It brings you AMP HTML and share "
-"buttons. Lightweight and safety."
+"The powered addons for the Coldbox theme. AMP pages, Google Analytics "
+"integrations, social buttons and more!"
 msgstr ""
 "Coldbox テーマ用に設計された軽量プラグイン。このプラグインを導入することで "
 "AMP HTML やシェアボタンが利用できるようになります。"
+
+#~ msgid "I have a new feature request."
+#~ msgstr "新機能の要望"
+
+#~ msgid "https://coldbox.miruc.co/addon/"
+#~ msgstr "https://coldbox.miruc.co/ja/addon/"
 
 #~ msgid "https://coldbox.miruc.co/addons/share-buttons/"
 #~ msgstr "https://coldbox.miruc.co/ja/addons/share-buttons/"
