--- a/languages/ja.po
+++ b/languages/ja.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: official\n"
-"POT-Creation-Date: 2018-03-13 11:36+0900\n"
-"PO-Revision-Date: 2018-03-13 19:19+0900\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2018-06-24 08:56+0900\n"
+"PO-Revision-Date: 2018-06-24 08:57+0900\n"
+"Last-Translator: Toshihiro Kanai (mirucon) <i@miruc.co>\n"
 "Language-Team: Mirucon\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.0.8\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -249,8 +249,8 @@ msgid "https://wordpress.org/plugins/coldbox-addon/"
 msgstr "https://ja.wordpress.org/plugins/coldbox-addon/"
 
 #: home.php:219
-msgid "Coldbox Addon"
-msgstr "Coldbox Addon"
+msgid "Coldbox Addons"
+msgstr "Coldbox Addons"
 
 #: home.php:220
 msgid ""
@@ -260,14 +260,28 @@ msgstr ""
 "Coldbox テーマ用に設計された軽量プラグイン。このプラグインを導入することで "
 "AMP HTML やシェアボタンが利用できるようになります。"
 
+#: home.php:224
+msgid "https://coldbox.miruc.co/addons/google-adsense-extension/"
+msgstr "https://coldbox.miruc.co/ja/addons/google-adsense-extension/"
+
+#: home.php:227
+msgid "Coldbox Ads Extension"
+msgstr "Coldbox Ads Extension"
+
+#: home.php:228
+msgid ""
+"The unified and powered ads extension plugin which gives you the great "
+"experiences and engagements on Google AdSense without writing code at all! "
+"The best way to monetize your blog with the Coldbox theme."
+msgstr ""
+"Coldbox テーマに特化した Google AdSense 用プラグインです。難しい設定無しで "
+"Coldbox テーマに最適化された広告が表示でき、高い収益が期待できます !"
+
 #~ msgid "I have a new feature request."
 #~ msgstr "新機能の要望"
 
 #~ msgid "https://coldbox.miruc.co/addon/"
 #~ msgstr "https://coldbox.miruc.co/ja/addon/"
-
-#~ msgid "https://coldbox.miruc.co/addons/share-buttons/"
-#~ msgstr "https://coldbox.miruc.co/ja/addons/share-buttons/"
 
 #~ msgid "Share Buttons Add-On"
 #~ msgstr "シェアボタン"
